feat: get plugins api
